Fix quantity box being too small

--- a/woocommerce-custom.css
+++ b/woocommerce-custom.css
@@ -133,8 +133,8 @@
 }
 
 .woocommerce .quantity .qty {
-	width: 3.631em;
-	text-align: center
+	width: 4.2em;
+	text-align: left;
 }
 
 .woocommerce div.product {
